[package]
name = "igni"
version = "0.1.0"
authors = ["manuranga perera <rcmperera@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.20.0-alpha3"
env_logger = "0.6"
wgpu = { version = "0.3.0", git = "https://github.com/gfx-rs/wgpu-rs", rev = "cb25914b95b58fee0dc139b400867e7a731d98f4" }
shaderc = "0.6"